[gd_scene load_steps=6 format=3 uid="uid://dpwo180bwe82o"]

[ext_resource type="Script" path="res://Character/character.gd" id="1_cbdud"]
[ext_resource type="Texture2D" uid="uid://dgo6bv3ij3225" path="res://Assets/sleeping_boy.png" id="2_m1l3c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nwp0d"]
radius = 102.0
height = 540.0

[sub_resource type="Animation" id="Animation_rdluc"]
resource_name = "move"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uqu2e"]
_data = {
"move": SubResource("Animation_rdluc")
}

[node name="Character" type="Area2D" groups=["Character"]]
z_index = 2
scale = Vector2(0.2, 0.2)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_cbdud")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_m1l3c")
region_enabled = true
region_rect = Rect2(0, 0, 574, 286.654)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 45)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nwp0d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uqu2e")
}

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 43.3333)
rotation = 1.5708
scale = Vector2(-0.75503, 5.5568)
exclude_parent = false

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 45)
rotation = -1.5708
scale = Vector2(0.999, 5.557)
exclude_parent = false
target_position = Vector2(1, 50)

[node name="BlockTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
one_shot = true
